Correct overflow display issue in the block editor.

--- a/includes/blocks/carousel/style.scss
+++ b/includes/blocks/carousel/style.scss
@@ -50,6 +50,7 @@
 			.slick-slide {
 				height: inherit !important;
 				margin: 0;
+				overflow: hidden;
 				padding: 20px;
 
 				.slick-slide-grid {
